# minirps

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  test.toml
assets/: cors.html  index.html
assets/.secret/: hello.txt
assets/tests/: data.json
examples/: cors_server.toml  default.toml  empty.toml  index.html  new.toml  starwars.toml  test.hurl  test.toml
examples/bootstrap/: config.json
examples/bootstrap/data/: schema.json  site.json
examples/bootstrap/templates/: index.html  post.html
examples/command_line/: config.toml
examples/command_line/templates/: index.html
examples/demo/: config.json  config.toml
examples/demo/assets/: cors.json
examples/demo/data/: chemistry.json
examples/demo/data/starwars/: films.json  people.json  planets.json  species.json  starships.json  vehicles.json
examples/demo/templates/: base.html  cli.html  cors.html  debug.html  index.html  starwars.html
examples/demo/templates/chemistry/: data.html  element.html  table.html
examples/demo/templates/debug/: form.html
examples/demo/templates/notes/: create.html  edit.html  read.html  update.html
examples/git/: config.toml
examples/git/templates/: base.html  home.html  table.html
examples/periodic_table/: config.toml
examples/periodic_table/assets/: data.json
examples/periodic_table/templates/: base.html  element.html  json.html  table.html
examples/starwars/: config.json  config.toml
examples/starwars/templates/: base.html  films.html  people.html  planets.html  species.html  starships.html  vehicles.html
examples/tests/: config.toml  test.hurl
examples/tests/assets/: cors.html  index.html
examples/tests/assets/tests/deep/: msg.txt
examples/tests/templates/: httpbin.html
examples/tests/templates/tests/: data.html  data.txt
src/: assets.rs  config.rs  debug.rs  handler.rs  main.rs  templates.rs
src/app/: context.rs  mod.rs  modify.rs  proxy.rs  redirect.rs
src/templates/: command.rs  fetch.rs  file.rs  format.rs  mod.rs  parse.rs
src/templates/addons/: cmd.rs  command.rs  fetch.rs  file.rs  mod.rs  parse.rs
templates/: base.html  demo.html  films.html  home.html  people.html
templates/tests/: data.txt
tests/: cors_client.toml  http.hurl  http.toml
