[package]
name = "minirps"
version = "0.1.0"
edition = "2021"
authors = ["Marco Di Pillo Tomic <marcodpt@protonmail.com>"]
license = "MIT"
description = "Mini reverse proxy server written in rust"
readme = "README.md"
homepage = "https://github.com/marcodpt/minirps"
repository = "https://github.com/marcodpt/minirps"
keywords = [
  "reverse-proxy",
  "server",
  "single-binary",
  "axum",
  "minijinja"
]
categories = ["web-programming::http-server"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0", features = ["cors"] }
axum = { version = "0", features = ["matched-path", "original-uri", "query"] }
axum-server = { version = "0", features = ["tls-rustls"] }
clap = {version = "4", features = ["derive"]}
toml = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
mime_guess = "2"
minijinja = { version = "1", features = ["loader"] }
reqwest = "0"

[profile.release]
opt-level = 3
