[package]
name = "minirps"
version = "0.2.1"
edition = "2021"
authors = ["Marco Di Pillo Tomic <marcodpt@protonmail.com>"]
license = "MIT"
description = "Mini reverse proxy server written in rust"
readme = "README.md"
homepage = "https://github.com/marcodpt/minirps"
repository = "https://github.com/marcodpt/minirps"
keywords = [
  "reverse-proxy",
  "server",
  "single-binary",
  "axum",
  "minijinja"
]
categories = ["web-programming::http-server"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0", features = ["cors"] }
axum = { version = "0", features = ["matched-path", "original-uri", "query"] }
axum-server = { version = "0", features = ["tls-openssl"] }
clap = {version = "4", features = ["derive"]}
toml = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0"
mime_guess = "2"
minijinja = { version = "2", features = ["loader"] }
reqwest = { version = "0", features = ["blocking"] }
glob-match = "0"
chrono = "0"

[profile.release]
opt-level = 3
